crates/wac-parser/tests/resolution/fail/invalid-alias.wac
interface a {

}

type x = a;